<resources>
    <!-- Application -->
    <string name="app_name">II142x</string>

    <!-- Generics -->
    <string name="back">back</string>
    <string name="zero_number">0</string>

    <!-- MainActivity -->
    <string name="btnMainSensors">Sensors</string>
    <string name="btnMainPhoto">Photo</string>
    <string name="btnMainAccelerometer">Accelerometer</string>
    <string name="textViewMainHeartRate">Heart reate</string>
    <string name="textViewMainGPS">GPS</string>
    <string name="textViewMainPressure">Pressure</string>
    <string name="btnMainGPS">GPS</string>
    <string name="btnMainHeartRate">Heart rate</string>
    <string name="btnMainPressure">Pressure</string>

    <!-- HeartRateActivity -->
    <string name="textviewHeartRateHeartRate">Heart rate:</string>
    <string name="btnHeartRateAccelerometer">Accelerometer</string>

    <!-- GPSActivity -->
    <string name="gps">GPS</string>
    <string name="gpsLatitude">Latitude</string>
    <string name="gpsLongitude">Longitude</string>

    <!-- AccelerometerActivity -->
    <string name="AccelerometerStart">Start Accelerometer</string>
    <string name="AccelerometerStop">Stop Accelerometer</string>
    <string name="Accelerometer">Accelerometer</string>

    <!-- PressureActivity -->
    <string name="pressure">Pressure</string>
    <string name="btnSendPhoto">Send photo</string>
    <string name="photoReset">Reset</string>
    <string name="btnStopReadAccelerometer">Stop accelerometer</string>
    <string name="btnStartReadAccelerometer">Start accelerometer</string>


</resources>