<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PressureActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="0dp">
        <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="2"
                android:columnCount="1">

            <LinearLayout>
                <TextView
                        android:id="@+id/textViewPressure"
                        android:textSize="20sp"
                        android:layout_width="200sp"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"/>

                <TextView
                        android:id="@+id/textViewPressureCurrentValue"
                        android:textSize="20sp"
                        android:layout_width="200sp"
                        android:layout_height="wrap_content"
                        android:text="@string/zero_number"/>
            </LinearLayout>


            <Button android:text="@string/back"
                    android:id="@+id/btnPressureBack"
                    android:textSize="32sp"
                    android:layout_column="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </GridLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>