<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PhotoActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="4"
                android:columnCount="1">
            <ImageView
                    android:id="@+id/imgView"
                    android:layout_width="93dp"
                    android:layout_height="67dp"
                    android:src="@drawable/pic"
                    android:layout_gravity="center"/>
            <Button
                    android:id="@+id/btnPhotoSend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnSendPhoto"
                    android:layout_gravity="center"/>

            <Button
                    android:id="@+id/btnPhotoReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photoReset"
                    android:layout_gravity="center"/>

            <Button
                    android:id="@+id/btnPhotoBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:layout_gravity="center"/>


        </GridLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>